--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "fontawesome": "~4.3.0"
   },
   "devDependencies": {
-    "angular": "~1.4.3"
+    "angular": "~1.4.3",
+    "bootstrap": "~3.3.5"
   }
 }
