--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "angular-animate": "~1.4.3"
   },
   "appPath": "app",
   "moduleName": "kenmbukigithubiongbookApp",
